// Copyright 2017 <codefever@github.com>
syntax = "proto3";
package rpc;

enum RpcErrorCode {
  OK = 0;
  TIMEOUT = 1;
  BUSY = 2;
  CONNECTION_ERROR = 3;
  UNSUPPORTED_METHODS = 4;
  PARSE_ERROR = 5;
  SERIALIZE_ERROR = 6;
  CALL_ERROR = 7;

  UNDEFINED_ERROR = 100;
}

enum RpcCompressType {
  NONE = 0;
}
